--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -252,11 +252,12 @@ SubmittedLeadScreen As screen:
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     FontWeight: =FontWeight.Semibold
+                    Height: =50
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                     Text: ="Sort by column"
                     Width: |-
                         =//If(Parent.Width>500,Parent.Width/2.4,Parent.Width/3)
-                        Parent.Width-ComboBox1.Width-Icon1.Width-50
+                        Parent.Width-ComboBox1.Width-Icon1.Width-20
                     X: =Parent.Width-Self.Width
                     Y: =10
                     ZIndex: =1
@@ -285,9 +286,7 @@ SubmittedLeadScreen As screen:
                     SelectionFill: =RGBA(237, 237, 237, 1)
                     SelectMultiple: =false
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Width: |-
-                        =//Parent.Width/2
-                        200
+                    Width: =180
                     ZIndex: =2
 
                 Icon1 As icon.ArrowsUpDown:
