--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -254,7 +254,9 @@ RejectedLeads As screen:
                     FontWeight: =FontWeight.Semibold
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                     Text: ="Sort by column"
-                    Width: =If(Parent.Width>500,Parent.Width/2.4,Parent.Width/3)
+                    Width: |-
+                        =//If(Parent.Width>500,Parent.Width/2.4,Parent.Width/3)
+                        Parent.Width-ComboBox1_1.Width-Icon1_1.Width-20
                     X: =Parent.Width-Self.Width
                     Y: =10
                     ZIndex: =1
@@ -283,9 +285,7 @@ RejectedLeads As screen:
                     SelectionFill: =RGBA(237, 237, 237, 1)
                     SelectMultiple: =false
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Width: |-
-                        =//Parent.Width/2
-                        200
+                    Width: =180
                     ZIndex: =2
 
                 Icon1_1 As icon.ArrowsUpDown:
